--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  background-color: #F55A5A;
+  height:80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 15px;
+}
+.img {
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.card-- {
+  margin: 20px;
+  display:flex;
+  border-bottom: 1px solid #F5F5F5;
+  box-shadow: 0px 5px #F5F5F5;
+}
+h1 {
+margin-top: 10px;
+margin-bottom: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h5 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.card--info {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  margin: 20px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.card--img {
+  width: 125px;
+  height: 168px;
+  margin: 20px;
+  border-radius:5px;
+}
+.icon {
+  width: 7px;
+  height: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card--location {
+  display:flex;
+  align-items: center;
+  text-indent: 5px;
+}
+.card--location>a{
+  color: #808080;
+  font-size:12px;
 }
